[gd_scene load_steps=2 format=3 uid="uid://df4365tdb7c4q"]

[ext_resource type="Script" path="res://scenes/UI/ability_upgrade_card.gd" id="1_vpn2q"]

[node name="AbilityUpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(120, 150)
script = ExtResource("1_vpn2q")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Test name"
horizontal_alignment = 1

[node name="DiscriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Write some discription here as you write a long disrcription"
autowrap_mode = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
